--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
 }
 
 p, h2 {
-   /* max-width: 100%;*/
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: normal;
@@ -451,4 +450,67 @@ select:focus {
 .post form {
     align-self: center;
     width: max-content;
+}
+
+.factors_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.factor2 {
+    margin-left: 10px;
+}
+
+.topic {
+    width: max-content;
+}
+
+.topic_weight {
+    width: 80px;
+}
+
+.topic_weight_container {
+    margin-left: 10px;
+    width: min-content;
+}
+
+.add_topic_container {
+    display: flex;
+    flex-direction: row;
+}
+
+.update_weights_form {
+    margin-top: 10px;
+}
+
+.topic_container {
+    width: 100%;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.topic_container * {
+    margin: 0;
+}
+
+.add_topic_container {
+    display: flex;
+    flex-direction: row;
+}
+
+.update_topic_container {
+    display: flex;
+    flex-direction: row;
+}
+
+.update_topic_container * {
+    margin-left: 10px;
+}
+
+.update_topic_container a {
+    margin: 0;
 }
