--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ p, h2 {
     margin: 10px 0;
 }
 
-.posts {
+.posts, .profile-container {
     max-width: 600px;
 }
 
@@ -513,4 +513,17 @@ select:focus {
 
 .update_topic_container a {
     margin: 0;
+}
+
+.profile-info-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 10px;
+}
+
+img {
+    width: 300px;
+    align-self: center;
 }
